# MACKI_mainboard

./: .gitignore  README.md  doxygen.sh  lint.sh
.devcontainer/: devcontainer.json
.github/workflows/: gitci.yml
docs/: Command_specification.md  Data_transmission_specification.md  Init_procedure.puml  Main_calibration_procedure.puml  Main_grab_test_calibrate_procedure.puml  Main_grab_test_execute_procedure.puml  Self_test_procedure.puml  board_architecture.puml  hardfault_procedure.puml
docs/architecture/: board_architecture.puml
src/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
src/components/alternative_ic_drivers/: CMakeLists.txt  tmc2209_c.h
src/components/app/: CMakeLists.txt
src/components/app/cli_task/: cli_task.c  cli_task.h
src/components/app/controllers/: mechanical_controller.h
src/components/app/include/: data_queues.c  data_queues.h
src/components/app/logger_task/: logger_task.c  logger_task.h
src/components/app/mechanical_task/: mechanical_task.c  mechanical_task.h
src/components/app/memory_task/: memory_task.c  memory_task.h
src/components/app/motor_task/: motor_task.c  motor_task.h
src/components/app/procedure_task/: procedure_exec_helper.c  procedure_exec_helper.h  procedure_task.c  procedure_task.h
src/components/app/sensor_task/: distance_sensor_task.c  distance_sensor_task.h  i2c_sensor_defines.h  sensor_task.c  sensor_task.h  vl53l1_platform.c
src/components/cmd_parser/: CMakeLists.txt  cmd_command_defines.h  cmd_command_register.c  cmd_command_register.h  cmd_defines.h  cmd_parser.c  cmd_parser.h  cmd_procedure.c  cmd_procedure.h  cmd_valve.h
src/components/communication_interfaces/: CMakeLists.txt
src/components/communication_interfaces/uart_console_interface/: uart_console_interface.c  uart_console_interface.h
src/components/communication_interfaces/uart_interface/: uart_interface.c  uart_interface.h
src/components/communication_interfaces/usb_cdc_interface/: usb_cdc_interface.c  usb_cdc_interface.h
src/components/controllers/: CMakeLists.txt
src/components/controllers/mechanical_controller/: gpio_expander_wrapper.c  gpio_expander_wrapper.h  limit_switch_wrapper.c  limit_switch_wrapper.h  mechanical_controller.c  mechanical_controller.h
src/components/controllers/sensor_controller/: sensor_controller.c  sensor_controller.h  sensor_converters.c  sensor_converters.h  sensor_driver_definitions.h  timeout_utility.c  timeout_utility.h
src/components/controllers/shared_wrappers/: shared_delay_wrapper.c  shared_delay_wrapper.h  shared_i2c_wrapper.c  shared_i2c_wrapper.h
src/components/external_drivers/: CMakeLists.txt  vl53l1_api.h
src/components/hardware_implementation/: CMakeLists.txt  limit_switch.h  solenoid_implementation.c  solenoid_implementation.h
src/components/i2c_sensor_defines/: CMakeLists.txt  i2c_sensor_defines.c  i2c_sensor_defines.h
src/components/ic_drivers/: CMakeLists.txt
src/components/ic_drivers/ads1115_driver/: ads1115_driver.c  ads1115_driver.h  ads1115_registers.h
src/components/ic_drivers/include/: i2c_ic_function_defines.h  ic_function_defines.h
src/components/ic_drivers/lis2dw12_driver/: lis2dw12_data_structs.h  lis2dw12_driver.c  lis2dw12_driver.h  lis2dw12_registers.h
src/components/ic_drivers/pca9574_driver/: pca9574_driver.c  pca9574_driver.h  pca9574_registers.h
src/components/ic_drivers/solenoid_driver/: solenoid_driver.c  solenoid_driver.h
src/components/ic_drivers/test/: CMakeLists.txt  shared_gpio_wrapper.c  shared_gpio_wrapper.h  shared_i2c_wrapper.c  shared_i2c_wrapper.h  shared_uart_wrapper.c  shared_uart_wrapper.h  test_ads1115_driver.c  test_lis2dw12_driver.c  test_pca9574_driver.c  test_solenoid_driver.c  test_tmc2209_driver.c  test_tmp1075_driver.c  test_vl53l0x_driver.c
src/components/ic_drivers/tmc2209_driver/: tmc2209_datagram.c  tmc2209_datagram.h  tmc2209_driver.c  tmc2209_driver.h  tmc2209_registers.h
src/components/ic_drivers/tmc2209_driver_UNUSED/: tmc2209_registers.h
src/components/ic_drivers/tmp1075_driver/: tmp1075_driver.c  tmp1075_driver.h  tmp1075_registers.h
src/components/ic_drivers/vl53l0x_driver/: vl53l0x_driver.c  vl53l0x_driver.h
src/components/ic_drivers/vl53l1x_driver/: vl53l1x_driver.c  vl53l1x_driver.h
src/components/ic_drivers_arduino/: tmc2209_wrapper_c.h
src/components/logger/: CMakeLists.txt
src/components/macki_log/: CMakeLists.txt
src/components/peripheral_drivers/: CMakeLists.txt
src/components/peripheral_drivers/adc_driver/: adc_driver.c  adc_driver.h
src/components/peripheral_drivers/i2c_driver/: i2c_driver.c  i2c_driver.h
src/components/peripheral_drivers/spi_driver/: spi_driver.c  spi_driver.h
src/components/peripheral_drivers/spi_sd_driver/: spi_sd_driver.c  spi_sd_driver.h
src/components/peripheral_drivers/test/: CMakeLists.txt  test_adc_driver.c  test_i2c_driver.c  test_spi_sd_driver.c  test_uart_driver.c  test_usb_cdc_driver.c
src/components/peripheral_drivers/uart_comm_driver/: uart_comm_driver.c  uart_comm_driver.h
src/components/peripheral_drivers/uart_driver/: uart_driver.c  uart_driver.h
src/components/peripheral_drivers/usb_cdc_driver/: usb_cdc_driver.c  usb_cdc_driver.h
src/components/peripheral_interfaces/: CMakeLists.txt
src/components/peripheral_interfaces/adc_wrapper/: adc_wrapper.c  adc_wrapper.h
src/components/peripheral_interfaces/gpio_wrapper/: gpio_wrapper.c  gpio_wrapper.h
src/components/peripheral_interfaces/i2c_wrapper/: i2c_wrapper.c  i2c_wrapper.h
src/components/peripheral_interfaces/rtc_wrapper/: rtc_wrapper.c  rtc_wrapper.h
src/components/peripheral_interfaces/uart_wrapper/: uart_wrapper.c  uart_wrapper.h
src/components/procedure/: CMakeLists.txt  procedure_parser.c  procedure_parser.h  procedure_parser_helper.c  procedure_parser_helper.h  procedure_typedef.h
src/components/tmc2209_arduino/: CMakeLists.txt
src/components/utils/: CMakeLists.txt
src/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
src/test/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
src/test/main/: CMakeLists.txt  (+1 more)
(+25 files in other folders)
